# autotest

./: .editorconfig  CMakeLists.txt  README.md  autotest-unix.c  autotest.c  autotest.h  test-case.h
test/: CMakeLists.txt  simple.c  test1.c
